--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,18 @@
 //            name: "propdeps-plugin", version: "0.0.5");
 //    }
 //};
+//buildscript {
+
+//repositories {
+//     google()
+//  jcenter()
+// mavenCentral()
+// }
+// dependencies {
+//   classpath(group: "com.android.tools.build",
+//    name: "gradle", version: "8.0");
+// }
+//};
 
 //configure(allprojects) {
 //    apply(plugin: "propdeps");
@@ -48,14 +60,15 @@
 //    apply(plugin: "propdeps-eclipse");
 //}
 
+
 apply(plugin: "java");
-apply(plugin: "maven");
-apply(plugin: "signing");
-apply(plugin: "osgi");
+apply(plugin: "maven-publish");
+// apply(plugin: "signing");
+// apply(plugin: "osgi");
 apply(plugin: "idea");
 apply(plugin: "eclipse");
-
 apply(from: "project.gradle");
+
 
 /*
  * Repositories to use
@@ -93,24 +106,24 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 //    options.overview = "src/main/java/overview.html";
 //}
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = "javadoc";
-    from javadoc.destinationDir;
-}
 
 artifacts {
     archives jar;
     archives sourcesJar;
-    archives javadocJar;
+
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = "1.11";
-    distributionUrl = "http://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip";
-}
 
-task pom << {
-    pom {}.writeTo("${projectDir}/pom.xml");
+task pom  {
+    doLast {
+        pom {
+            project {
+                groupId 'com.github.fge'
+                artifactId 'json-schema-avro'
+                version '1.0.0'
+            }
+        }.writeTo("${projectDir}/pom.xml");
+    }
 }
 
 /*
@@ -125,90 +138,19 @@ project.ext {
     sonatypeSnapshots = "https://oss.sonatype.org/content/repositories/snapshots/";
 };
 
-task checkSigningRequirements << {
-    def requiredProperties = [ "sonatypeUsername", "sonatypePassword" ];
-    def noDice = false;
-    requiredProperties.each {
-        if (project.properties[it] == null) {
-            noDice = true;
-            System.err.printf("property \"%s\" is not defined!")
+task checkSigningRequirements {
+    doLast {
+        def requiredProperties = [ "sonatypeUsername", "sonatypePassword" ];
+        def noDice = false;
+        requiredProperties.each {
+            if (project.properties[it] == null) {
+                noDice = true;
+                System.err.printf("property \"%s\" is not defined!")
+            }
         }
+        if (noDice)
+            throw new IllegalStateException("missing required properties for " +
+                    "upload");
     }
-    if (noDice)
-        throw new IllegalStateException("missing required properties for " +
-            "upload");
-}
-
-uploadArchives {
-    dependsOn(checkSigningRequirements);
-    repositories {
-        mavenDeployer {
-            beforeDeployment {
-                MavenDeployment deployment -> signing.signPom(deployment);
-            }
-
-            repository(url: "${sonatypeStaging}") {
-                authentication(
-                    userName: project.properties["sonatypeUsername"],
-                    password: project.properties["sonatypePassword"]
-                );
-            }
-
-            snapshotRepository(url: "${sonatypeSnapshots}") {
-                authentication(
-                    userName: project.properties["sonatypeUsername"],
-                    password: project.properties["sonatypePassword"]
-                );
-            }
-        }
-    }
-}
-
-/*
- * Configure pom.xml on install, uploadArchives
- */
-[
-    install.repositories.mavenInstaller,
-    uploadArchives.repositories.mavenDeployer
-]*.pom*.whenConfigured { pom ->
-    pom.project {
-        name "${name}";
-        packaging "jar";
-        description "${description}";
-        url "${projectURL}";
-
-        scm {
-            url "${gitrwscm}";
-            connection "${gitrwscm}";
-            developerConnection "${gitroscm}";
-        }
-
-        licenses {
-            license {
-                name "Lesser General Public License, version 3 or greater";
-                url "http://www.gnu.org/licenses/lgpl.html";
-                distribution "repo";
-            };
-            license {
-                name "Apache Software License, version 2.0";
-                url "http://www.apache.org/licenses/LICENSE-2.0";
-                distribution "repo";
-            }
-        }
-
-        developers {
-            developer {
-                id "fge";
-                name "Francis Galiegue";
-                email "fgaliegue@gmail.com";
-            }
-        }
-    }
-}
-
-ext.forRelease = !version.endsWith("-SNAPSHOT");
-signing {
-    required { forRelease && gradle.taskGraph.hasTask("uploadArchives") };
-    sign configurations.archives;
 }
 
